language/move-lang/tests/move_check/borrows/assign_local_full_invalid.exp
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_full_invalid.move:13:9
   │
12 │         let f = &x;
   │                 -- It is still being borrowed by this reference
13 │         x = 0;
   │         ^ Invalid assignment of local 'x'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_full_invalid.move:19:9
   │
18 │         let f = &mut x;
   │                 ------ It is still being mutably borrowed by this reference
19 │         x = 0;
   │         ^ Invalid assignment of local 'x'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_full_invalid.move:25:9
   │
24 │         let f = id(&x);
   │                 ------ It is still being borrowed by this reference
25 │         x = 0;
   │         ^ Invalid assignment of local 'x'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_full_invalid.move:31:9
   │
30 │         let f = id_mut(&mut x);
   │                 -------------- It is still being mutably borrowed by this reference
31 │         x = 0;
   │         ^ Invalid assignment of local 'x'

